First working version

--- a/Using IProgressT for Feedback/Using IProgressT for Feedback/Using IProgressT for Feedback.csproj
+++ b/Using IProgressT for Feedback/Using IProgressT for Feedback/Using IProgressT for Feedback.csproj
@@ -43,7 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AsynSimulator.cs" />
+    <Compile Include="IProgress.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="Progress.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
